# mine-sim

./: CMakeLists.txt  README.md  instructions.md  main.cpp  miningTruck.cpp  miningTruck.h  simulationController.cpp  simulationController.h  unloadSite.cpp  unloadSite.h
.github/workflows/: ci.yml
tests/: test_miningTruck.cpp  test_simulationController.cpp  test_unloadSite.cpp
